force-app/main/default/objects/Expense__c/fields/Notes_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Notes_Remarks__c</fullName>
    <label>Notes/Remarks</label>
    <type>TextArea</type>
</CustomField>