force-app/main/default/objects/Expense__c/fields/Spent_By__c.field-meta.xml
<CustomField>
    <fullName>Spent_By__c</fullName>
    <label>Spent By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Members</valueSetName>
    </valueSet>
</CustomField>